fix temp gague alignment issue

--- a/octoprint_dashboard/static/css/dashboard.css
+++ b/octoprint_dashboard/static/css/dashboard.css
@@ -1,6 +1,6 @@
 .dashboardGridContainer {
     display: grid;
-    grid-template-columns: auto auto auto;
+    grid-template-columns: repeat(3, minmax(0, 1fr));
     padding: 0px;
 }
 
